--- a/package.json
+++ b/package.json
@@ -3,85 +3,86 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/a11y-base": "24.1.0-beta2",
-    "@vaadin/accordion": "24.1.0-beta2",
-    "@vaadin/app-layout": "24.1.0-beta2",
-    "@vaadin/avatar": "24.1.0-beta2",
-    "@vaadin/avatar-group": "24.1.0-beta2",
-    "@vaadin/board": "24.1.0-beta2",
-    "@vaadin/bundles": "24.1.0-beta2",
-    "@vaadin/button": "24.1.0-beta2",
-    "@vaadin/charts": "24.1.0-beta2",
-    "@vaadin/checkbox": "24.1.0-beta2",
-    "@vaadin/checkbox-group": "24.1.0-beta2",
-    "@vaadin/combo-box": "24.1.0-beta2",
+    "@vaadin/a11y-base": "24.1.4",
+    "@vaadin/accordion": "24.1.4",
+    "@vaadin/app-layout": "24.1.4",
+    "@vaadin/avatar": "24.1.4",
+    "@vaadin/avatar-group": "24.1.4",
+    "@vaadin/board": "24.1.4",
+    "@vaadin/bundles": "24.1.4",
+    "@vaadin/button": "24.1.4",
+    "@vaadin/charts": "24.1.4",
+    "@vaadin/checkbox": "24.1.4",
+    "@vaadin/checkbox-group": "24.1.4",
+    "@vaadin/combo-box": "24.1.4",
     "@vaadin/common-frontend": "0.0.18",
-    "@vaadin/component-base": "24.1.0-beta2",
-    "@vaadin/confirm-dialog": "24.1.0-beta2",
-    "@vaadin/context-menu": "24.1.0-beta2",
-    "@vaadin/cookie-consent": "24.1.0-beta2",
-    "@vaadin/crud": "24.1.0-beta2",
-    "@vaadin/custom-field": "24.1.0-beta2",
-    "@vaadin/date-picker": "24.1.0-beta2",
-    "@vaadin/date-time-picker": "24.1.0-beta2",
-    "@vaadin/details": "24.1.0-beta2",
-    "@vaadin/dialog": "24.1.0-beta2",
-    "@vaadin/email-field": "24.1.0-beta2",
-    "@vaadin/field-base": "24.1.0-beta2",
-    "@vaadin/field-highlighter": "24.1.0-beta2",
-    "@vaadin/form-layout": "24.1.0-beta2",
-    "@vaadin/grid": "24.1.0-beta2",
-    "@vaadin/grid-pro": "24.1.0-beta2",
-    "@vaadin/horizontal-layout": "24.1.0-beta2",
-    "@vaadin/icon": "24.1.0-beta2",
-    "@vaadin/icons": "24.1.0-beta2",
-    "@vaadin/input-container": "24.1.0-beta2",
-    "@vaadin/integer-field": "24.1.0-beta2",
-    "@vaadin/item": "24.1.0-beta2",
-    "@vaadin/list-box": "24.1.0-beta2",
-    "@vaadin/lit-renderer": "24.1.0-beta2",
-    "@vaadin/login": "24.1.0-beta2",
-    "@vaadin/map": "24.1.0-beta2",
-    "@vaadin/menu-bar": "24.1.0-beta2",
-    "@vaadin/message-input": "24.1.0-beta2",
-    "@vaadin/message-list": "24.1.0-beta2",
-    "@vaadin/multi-select-combo-box": "24.1.0-beta2",
-    "@vaadin/notification": "24.1.0-beta2",
-    "@vaadin/number-field": "24.1.0-beta2",
-    "@vaadin/overlay": "24.1.0-beta2",
-    "@vaadin/password-field": "24.1.0-beta2",
-    "@vaadin/polymer-legacy-adapter": "24.1.0-beta2",
-    "@vaadin/progress-bar": "24.1.0-beta2",
-    "@vaadin/radio-group": "24.1.0-beta2",
-    "@vaadin/rich-text-editor": "24.1.0-beta2",
+    "@vaadin/component-base": "24.1.4",
+    "@vaadin/confirm-dialog": "24.1.4",
+    "@vaadin/context-menu": "24.1.4",
+    "@vaadin/cookie-consent": "24.1.4",
+    "@vaadin/crud": "24.1.4",
+    "@vaadin/custom-field": "24.1.4",
+    "@vaadin/date-picker": "24.1.4",
+    "@vaadin/date-time-picker": "24.1.4",
+    "@vaadin/details": "24.1.4",
+    "@vaadin/dialog": "24.1.4",
+    "@vaadin/email-field": "24.1.4",
+    "@vaadin/field-base": "24.1.4",
+    "@vaadin/field-highlighter": "24.1.4",
+    "@vaadin/form-layout": "24.1.4",
+    "@vaadin/grid": "24.1.4",
+    "@vaadin/grid-pro": "24.1.4",
+    "@vaadin/horizontal-layout": "24.1.4",
+    "@vaadin/icon": "24.1.4",
+    "@vaadin/icons": "24.1.4",
+    "@vaadin/input-container": "24.1.4",
+    "@vaadin/integer-field": "24.1.4",
+    "@vaadin/item": "24.1.4",
+    "@vaadin/list-box": "24.1.4",
+    "@vaadin/lit-renderer": "24.1.4",
+    "@vaadin/login": "24.1.4",
+    "@vaadin/map": "24.1.4",
+    "@vaadin/menu-bar": "24.1.4",
+    "@vaadin/message-input": "24.1.4",
+    "@vaadin/message-list": "24.1.4",
+    "@vaadin/multi-select-combo-box": "24.1.4",
+    "@vaadin/notification": "24.1.4",
+    "@vaadin/number-field": "24.1.4",
+    "@vaadin/overlay": "24.1.4",
+    "@vaadin/password-field": "24.1.4",
+    "@vaadin/polymer-legacy-adapter": "24.1.4",
+    "@vaadin/progress-bar": "24.1.4",
+    "@vaadin/radio-group": "24.1.4",
+    "@vaadin/rich-text-editor": "24.1.4",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.1.0-beta2",
-    "@vaadin/select": "24.1.0-beta2",
-    "@vaadin/side-nav": "24.1.0-beta2",
-    "@vaadin/split-layout": "24.1.0-beta2",
-    "@vaadin/tabs": "24.1.0-beta2",
-    "@vaadin/tabsheet": "24.1.0-beta2",
-    "@vaadin/text-area": "24.1.0-beta2",
-    "@vaadin/text-field": "24.1.0-beta2",
-    "@vaadin/time-picker": "24.1.0-beta2",
-    "@vaadin/tooltip": "24.1.0-beta2",
-    "@vaadin/upload": "24.1.0-beta2",
+    "@vaadin/scroller": "24.1.4",
+    "@vaadin/select": "24.1.4",
+    "@vaadin/side-nav": "24.1.4",
+    "@vaadin/split-layout": "24.1.4",
+    "@vaadin/tabs": "24.1.4",
+    "@vaadin/tabsheet": "24.1.4",
+    "@vaadin/text-area": "24.1.4",
+    "@vaadin/text-field": "24.1.4",
+    "@vaadin/time-picker": "24.1.4",
+    "@vaadin/tooltip": "24.1.4",
+    "@vaadin/upload": "24.1.4",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.1.0-beta2",
-    "@vaadin/vaadin-material-styles": "24.1.0-beta2",
-    "@vaadin/vaadin-themable-mixin": "24.1.0-beta2",
+    "@vaadin/vaadin-lumo-styles": "24.1.4",
+    "@vaadin/vaadin-material-styles": "24.1.4",
+    "@vaadin/vaadin-themable-mixin": "24.1.4",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.1.0-beta2",
-    "@vaadin/virtual-list": "24.1.0-beta2",
+    "@vaadin/vertical-layout": "24.1.4",
+    "@vaadin/virtual-list": "24.1.4",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.7.4",
+    "lit": "2.7.6",
     "mobile-drag-drop": "2.3.0-rc.2",
     "proj4": "2.9.0"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/pluginutils": "5.0.2",
+    "@vitejs/plugin-react": "4.0.0",
     "async": "3.2.2",
     "glob": "7.2.3",
     "mkdirp": "1.0.4",
@@ -90,11 +91,11 @@
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
     "typescript": "5.0.4",
-    "vite": "4.3.8",
+    "vite": "4.3.9",
     "vite-plugin-checker": "0.5.5",
-    "workbox-build": "6.5.4",
-    "workbox-core": "6.5.4",
-    "workbox-precaching": "6.5.4"
+    "workbox-build": "7.0.0",
+    "workbox-core": "7.0.0",
+    "workbox-precaching": "7.0.0"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -177,85 +178,86 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/a11y-base": "24.1.0-beta2",
-      "@vaadin/accordion": "24.1.0-beta2",
-      "@vaadin/app-layout": "24.1.0-beta2",
-      "@vaadin/avatar": "24.1.0-beta2",
-      "@vaadin/avatar-group": "24.1.0-beta2",
-      "@vaadin/board": "24.1.0-beta2",
-      "@vaadin/bundles": "24.1.0-beta2",
-      "@vaadin/button": "24.1.0-beta2",
-      "@vaadin/charts": "24.1.0-beta2",
-      "@vaadin/checkbox": "24.1.0-beta2",
-      "@vaadin/checkbox-group": "24.1.0-beta2",
-      "@vaadin/combo-box": "24.1.0-beta2",
+      "@vaadin/a11y-base": "24.1.4",
+      "@vaadin/accordion": "24.1.4",
+      "@vaadin/app-layout": "24.1.4",
+      "@vaadin/avatar": "24.1.4",
+      "@vaadin/avatar-group": "24.1.4",
+      "@vaadin/board": "24.1.4",
+      "@vaadin/bundles": "24.1.4",
+      "@vaadin/button": "24.1.4",
+      "@vaadin/charts": "24.1.4",
+      "@vaadin/checkbox": "24.1.4",
+      "@vaadin/checkbox-group": "24.1.4",
+      "@vaadin/combo-box": "24.1.4",
       "@vaadin/common-frontend": "0.0.18",
-      "@vaadin/component-base": "24.1.0-beta2",
-      "@vaadin/confirm-dialog": "24.1.0-beta2",
-      "@vaadin/context-menu": "24.1.0-beta2",
-      "@vaadin/cookie-consent": "24.1.0-beta2",
-      "@vaadin/crud": "24.1.0-beta2",
-      "@vaadin/custom-field": "24.1.0-beta2",
-      "@vaadin/date-picker": "24.1.0-beta2",
-      "@vaadin/date-time-picker": "24.1.0-beta2",
-      "@vaadin/details": "24.1.0-beta2",
-      "@vaadin/dialog": "24.1.0-beta2",
-      "@vaadin/email-field": "24.1.0-beta2",
-      "@vaadin/field-base": "24.1.0-beta2",
-      "@vaadin/field-highlighter": "24.1.0-beta2",
-      "@vaadin/form-layout": "24.1.0-beta2",
-      "@vaadin/grid": "24.1.0-beta2",
-      "@vaadin/grid-pro": "24.1.0-beta2",
-      "@vaadin/horizontal-layout": "24.1.0-beta2",
-      "@vaadin/icon": "24.1.0-beta2",
-      "@vaadin/icons": "24.1.0-beta2",
-      "@vaadin/input-container": "24.1.0-beta2",
-      "@vaadin/integer-field": "24.1.0-beta2",
-      "@vaadin/item": "24.1.0-beta2",
-      "@vaadin/list-box": "24.1.0-beta2",
-      "@vaadin/lit-renderer": "24.1.0-beta2",
-      "@vaadin/login": "24.1.0-beta2",
-      "@vaadin/map": "24.1.0-beta2",
-      "@vaadin/menu-bar": "24.1.0-beta2",
-      "@vaadin/message-input": "24.1.0-beta2",
-      "@vaadin/message-list": "24.1.0-beta2",
-      "@vaadin/multi-select-combo-box": "24.1.0-beta2",
-      "@vaadin/notification": "24.1.0-beta2",
-      "@vaadin/number-field": "24.1.0-beta2",
-      "@vaadin/overlay": "24.1.0-beta2",
-      "@vaadin/password-field": "24.1.0-beta2",
-      "@vaadin/polymer-legacy-adapter": "24.1.0-beta2",
-      "@vaadin/progress-bar": "24.1.0-beta2",
-      "@vaadin/radio-group": "24.1.0-beta2",
-      "@vaadin/rich-text-editor": "24.1.0-beta2",
+      "@vaadin/component-base": "24.1.4",
+      "@vaadin/confirm-dialog": "24.1.4",
+      "@vaadin/context-menu": "24.1.4",
+      "@vaadin/cookie-consent": "24.1.4",
+      "@vaadin/crud": "24.1.4",
+      "@vaadin/custom-field": "24.1.4",
+      "@vaadin/date-picker": "24.1.4",
+      "@vaadin/date-time-picker": "24.1.4",
+      "@vaadin/details": "24.1.4",
+      "@vaadin/dialog": "24.1.4",
+      "@vaadin/email-field": "24.1.4",
+      "@vaadin/field-base": "24.1.4",
+      "@vaadin/field-highlighter": "24.1.4",
+      "@vaadin/form-layout": "24.1.4",
+      "@vaadin/grid": "24.1.4",
+      "@vaadin/grid-pro": "24.1.4",
+      "@vaadin/horizontal-layout": "24.1.4",
+      "@vaadin/icon": "24.1.4",
+      "@vaadin/icons": "24.1.4",
+      "@vaadin/input-container": "24.1.4",
+      "@vaadin/integer-field": "24.1.4",
+      "@vaadin/item": "24.1.4",
+      "@vaadin/list-box": "24.1.4",
+      "@vaadin/lit-renderer": "24.1.4",
+      "@vaadin/login": "24.1.4",
+      "@vaadin/map": "24.1.4",
+      "@vaadin/menu-bar": "24.1.4",
+      "@vaadin/message-input": "24.1.4",
+      "@vaadin/message-list": "24.1.4",
+      "@vaadin/multi-select-combo-box": "24.1.4",
+      "@vaadin/notification": "24.1.4",
+      "@vaadin/number-field": "24.1.4",
+      "@vaadin/overlay": "24.1.4",
+      "@vaadin/password-field": "24.1.4",
+      "@vaadin/polymer-legacy-adapter": "24.1.4",
+      "@vaadin/progress-bar": "24.1.4",
+      "@vaadin/radio-group": "24.1.4",
+      "@vaadin/rich-text-editor": "24.1.4",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.1.0-beta2",
-      "@vaadin/select": "24.1.0-beta2",
-      "@vaadin/side-nav": "24.1.0-beta2",
-      "@vaadin/split-layout": "24.1.0-beta2",
-      "@vaadin/tabs": "24.1.0-beta2",
-      "@vaadin/tabsheet": "24.1.0-beta2",
-      "@vaadin/text-area": "24.1.0-beta2",
-      "@vaadin/text-field": "24.1.0-beta2",
-      "@vaadin/time-picker": "24.1.0-beta2",
-      "@vaadin/tooltip": "24.1.0-beta2",
-      "@vaadin/upload": "24.1.0-beta2",
+      "@vaadin/scroller": "24.1.4",
+      "@vaadin/select": "24.1.4",
+      "@vaadin/side-nav": "24.1.4",
+      "@vaadin/split-layout": "24.1.4",
+      "@vaadin/tabs": "24.1.4",
+      "@vaadin/tabsheet": "24.1.4",
+      "@vaadin/text-area": "24.1.4",
+      "@vaadin/text-field": "24.1.4",
+      "@vaadin/time-picker": "24.1.4",
+      "@vaadin/tooltip": "24.1.4",
+      "@vaadin/upload": "24.1.4",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.1.0-beta2",
-      "@vaadin/vaadin-material-styles": "24.1.0-beta2",
-      "@vaadin/vaadin-themable-mixin": "24.1.0-beta2",
+      "@vaadin/vaadin-lumo-styles": "24.1.4",
+      "@vaadin/vaadin-material-styles": "24.1.4",
+      "@vaadin/vaadin-themable-mixin": "24.1.4",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.1.0-beta2",
-      "@vaadin/virtual-list": "24.1.0-beta2",
+      "@vaadin/vertical-layout": "24.1.4",
+      "@vaadin/virtual-list": "24.1.4",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.7.4",
+      "lit": "2.7.6",
       "mobile-drag-drop": "2.3.0-rc.2",
       "proj4": "2.9.0"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "5.0.2",
       "@rollup/pluginutils": "5.0.2",
+      "@vitejs/plugin-react": "4.0.0",
       "async": "3.2.2",
       "glob": "7.2.3",
       "mkdirp": "1.0.4",
@@ -264,12 +266,12 @@
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
       "typescript": "5.0.4",
-      "vite": "4.3.8",
+      "vite": "4.3.9",
       "vite-plugin-checker": "0.5.5",
-      "workbox-build": "6.5.4",
-      "workbox-core": "6.5.4",
-      "workbox-precaching": "6.5.4"
+      "workbox-build": "7.0.0",
+      "workbox-core": "7.0.0",
+      "workbox-precaching": "7.0.0"
     },
-    "hash": "b24c4e24dbba5a509581afc3ee23612321ba91cf551c9d31b1e98bc2804be81f"
+    "hash": "c24e213163995c9bfcbcf714f076e6b5a26141ec1145d51896fcaafd8ffd8bea"
   }
 }
