--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,9 @@
                                 <phase>compile</phase>
                             </execution>
                         </executions>
+                        <configuration>
+                            <forceProductionBuild>true</forceProductionBuild>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
