--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+vaadin.launch-browser = true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 
 vaadin.frontend.hotdeploy = true
+
+-Dvaadin.skip.dev.bundle=true
