--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ vaadin.launch-browser = true
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 
 vaadin.frontend.hotdeploy = true
+
+-Dvaadin.skip.dev.bundle = true
