aria-current implemented for breadcrumb and stepper

--- a/package.json
+++ b/package.json
@@ -3,95 +3,95 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/a11y-base": "24.2.0-alpha14",
-    "@vaadin/accordion": "24.2.0-alpha14",
-    "@vaadin/app-layout": "24.2.0-alpha14",
-    "@vaadin/avatar": "24.2.0-alpha14",
-    "@vaadin/avatar-group": "24.2.0-alpha14",
-    "@vaadin/board": "24.2.0-alpha14",
-    "@vaadin/bundles": "24.2.0-alpha14",
-    "@vaadin/button": "24.2.0-alpha14",
-    "@vaadin/charts": "24.2.0-alpha14",
-    "@vaadin/checkbox": "24.2.0-alpha14",
-    "@vaadin/checkbox-group": "24.2.0-alpha14",
-    "@vaadin/combo-box": "24.2.0-alpha14",
-    "@vaadin/common-frontend": "0.0.18",
-    "@vaadin/component-base": "24.2.0-alpha14",
-    "@vaadin/confirm-dialog": "24.2.0-alpha14",
-    "@vaadin/context-menu": "24.2.0-alpha14",
-    "@vaadin/cookie-consent": "24.2.0-alpha14",
-    "@vaadin/crud": "24.2.0-alpha14",
-    "@vaadin/custom-field": "24.2.0-alpha14",
-    "@vaadin/date-picker": "24.2.0-alpha14",
-    "@vaadin/date-time-picker": "24.2.0-alpha14",
-    "@vaadin/details": "24.2.0-alpha14",
-    "@vaadin/dialog": "24.2.0-alpha14",
-    "@vaadin/email-field": "24.2.0-alpha14",
-    "@vaadin/field-base": "24.2.0-alpha14",
-    "@vaadin/field-highlighter": "24.2.0-alpha14",
-    "@vaadin/form-layout": "24.2.0-alpha14",
-    "@vaadin/grid": "24.2.0-alpha14",
-    "@vaadin/grid-pro": "24.2.0-alpha14",
-    "@vaadin/horizontal-layout": "24.2.0-alpha14",
-    "@vaadin/icon": "24.2.0-alpha14",
-    "@vaadin/icons": "24.2.0-alpha14",
-    "@vaadin/input-container": "24.2.0-alpha14",
-    "@vaadin/integer-field": "24.2.0-alpha14",
-    "@vaadin/item": "24.2.0-alpha14",
-    "@vaadin/list-box": "24.2.0-alpha14",
-    "@vaadin/lit-renderer": "24.2.0-alpha14",
-    "@vaadin/login": "24.2.0-alpha14",
-    "@vaadin/map": "24.2.0-alpha14",
-    "@vaadin/menu-bar": "24.2.0-alpha14",
-    "@vaadin/message-input": "24.2.0-alpha14",
-    "@vaadin/message-list": "24.2.0-alpha14",
-    "@vaadin/multi-select-combo-box": "24.2.0-alpha14",
-    "@vaadin/notification": "24.2.0-alpha14",
-    "@vaadin/number-field": "24.2.0-alpha14",
-    "@vaadin/overlay": "24.2.0-alpha14",
-    "@vaadin/password-field": "24.2.0-alpha14",
-    "@vaadin/polymer-legacy-adapter": "24.2.0-alpha14",
-    "@vaadin/progress-bar": "24.2.0-alpha14",
-    "@vaadin/radio-group": "24.2.0-alpha14",
-    "@vaadin/rich-text-editor": "24.2.0-alpha14",
+    "@vaadin/a11y-base": "24.3.1",
+    "@vaadin/accordion": "24.3.1",
+    "@vaadin/app-layout": "24.3.1",
+    "@vaadin/avatar": "24.3.1",
+    "@vaadin/avatar-group": "24.3.1",
+    "@vaadin/board": "24.3.1",
+    "@vaadin/bundles": "24.3.1",
+    "@vaadin/button": "24.3.1",
+    "@vaadin/charts": "24.3.1",
+    "@vaadin/checkbox": "24.3.1",
+    "@vaadin/checkbox-group": "24.3.1",
+    "@vaadin/combo-box": "24.3.1",
+    "@vaadin/common-frontend": "0.0.19",
+    "@vaadin/component-base": "24.3.1",
+    "@vaadin/confirm-dialog": "24.3.1",
+    "@vaadin/context-menu": "24.3.1",
+    "@vaadin/cookie-consent": "24.3.1",
+    "@vaadin/crud": "24.3.1",
+    "@vaadin/custom-field": "24.3.1",
+    "@vaadin/date-picker": "24.3.1",
+    "@vaadin/date-time-picker": "24.3.1",
+    "@vaadin/details": "24.3.1",
+    "@vaadin/dialog": "24.3.1",
+    "@vaadin/email-field": "24.3.1",
+    "@vaadin/field-base": "24.3.1",
+    "@vaadin/field-highlighter": "24.3.1",
+    "@vaadin/form-layout": "24.3.1",
+    "@vaadin/grid": "24.3.1",
+    "@vaadin/grid-pro": "24.3.1",
+    "@vaadin/horizontal-layout": "24.3.1",
+    "@vaadin/icon": "24.3.1",
+    "@vaadin/icons": "24.3.1",
+    "@vaadin/input-container": "24.3.1",
+    "@vaadin/integer-field": "24.3.1",
+    "@vaadin/item": "24.3.1",
+    "@vaadin/list-box": "24.3.1",
+    "@vaadin/lit-renderer": "24.3.1",
+    "@vaadin/login": "24.3.1",
+    "@vaadin/map": "24.3.1",
+    "@vaadin/menu-bar": "24.3.1",
+    "@vaadin/message-input": "24.3.1",
+    "@vaadin/message-list": "24.3.1",
+    "@vaadin/multi-select-combo-box": "24.3.1",
+    "@vaadin/notification": "24.3.1",
+    "@vaadin/number-field": "24.3.1",
+    "@vaadin/overlay": "24.3.1",
+    "@vaadin/password-field": "24.3.1",
+    "@vaadin/polymer-legacy-adapter": "24.3.1",
+    "@vaadin/progress-bar": "24.3.1",
+    "@vaadin/radio-group": "24.3.1",
+    "@vaadin/rich-text-editor": "24.3.1",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.2.0-alpha14",
-    "@vaadin/select": "24.2.0-alpha14",
-    "@vaadin/side-nav": "24.2.0-alpha14",
-    "@vaadin/split-layout": "24.2.0-alpha14",
-    "@vaadin/tabs": "24.2.0-alpha14",
-    "@vaadin/tabsheet": "24.2.0-alpha14",
-    "@vaadin/text-area": "24.2.0-alpha14",
-    "@vaadin/text-field": "24.2.0-alpha14",
-    "@vaadin/time-picker": "24.2.0-alpha14",
-    "@vaadin/tooltip": "24.2.0-alpha14",
-    "@vaadin/upload": "24.2.0-alpha14",
+    "@vaadin/scroller": "24.3.1",
+    "@vaadin/select": "24.3.1",
+    "@vaadin/side-nav": "24.3.1",
+    "@vaadin/split-layout": "24.3.1",
+    "@vaadin/tabs": "24.3.1",
+    "@vaadin/tabsheet": "24.3.1",
+    "@vaadin/text-area": "24.3.1",
+    "@vaadin/text-field": "24.3.1",
+    "@vaadin/time-picker": "24.3.1",
+    "@vaadin/tooltip": "24.3.1",
+    "@vaadin/upload": "24.3.1",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.2.0-alpha14",
-    "@vaadin/vaadin-material-styles": "24.2.0-alpha14",
-    "@vaadin/vaadin-themable-mixin": "24.2.0-alpha14",
+    "@vaadin/vaadin-lumo-styles": "24.3.1",
+    "@vaadin/vaadin-material-styles": "24.3.1",
+    "@vaadin/vaadin-themable-mixin": "24.3.1",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.2.0-alpha14",
-    "@vaadin/virtual-list": "24.2.0-alpha14",
+    "@vaadin/vertical-layout": "24.3.1",
+    "@vaadin/virtual-list": "24.3.1",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.8.0",
-    "mobile-drag-drop": "2.3.0-rc.2",
-    "proj4": "2.9.0"
+    "lit": "3.1.0",
+    "proj4": "2.9.2"
   },
   "devDependencies": {
-    "@rollup/plugin-replace": "5.0.2",
-    "@rollup/pluginutils": "5.0.2",
-    "@vitejs/plugin-react": "4.0.4",
+    "@rollup/plugin-replace": "5.0.4",
+    "@rollup/pluginutils": "5.0.5",
+    "@vitejs/plugin-react": "4.2.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
     "async": "3.2.4",
     "glob": "10.3.3",
     "rollup-plugin-brotli": "3.1.0",
     "rollup-plugin-visualizer": "5.9.2",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.1.6",
-    "vite": "4.4.9",
-    "vite-plugin-checker": "0.6.1",
+    "typescript": "5.3.3",
+    "vite": "5.0.6",
+    "vite-plugin-checker": "0.6.2",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
@@ -171,105 +171,104 @@
     "@polymer/polymer": "$@polymer/polymer",
     "proj4": "$proj4",
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "date-fns": "$date-fns",
-    "mobile-drag-drop": "$mobile-drag-drop"
+    "date-fns": "$date-fns"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/a11y-base": "24.2.0-alpha14",
-      "@vaadin/accordion": "24.2.0-alpha14",
-      "@vaadin/app-layout": "24.2.0-alpha14",
-      "@vaadin/avatar": "24.2.0-alpha14",
-      "@vaadin/avatar-group": "24.2.0-alpha14",
-      "@vaadin/board": "24.2.0-alpha14",
-      "@vaadin/bundles": "24.2.0-alpha14",
-      "@vaadin/button": "24.2.0-alpha14",
-      "@vaadin/charts": "24.2.0-alpha14",
-      "@vaadin/checkbox": "24.2.0-alpha14",
-      "@vaadin/checkbox-group": "24.2.0-alpha14",
-      "@vaadin/combo-box": "24.2.0-alpha14",
-      "@vaadin/common-frontend": "0.0.18",
-      "@vaadin/component-base": "24.2.0-alpha14",
-      "@vaadin/confirm-dialog": "24.2.0-alpha14",
-      "@vaadin/context-menu": "24.2.0-alpha14",
-      "@vaadin/cookie-consent": "24.2.0-alpha14",
-      "@vaadin/crud": "24.2.0-alpha14",
-      "@vaadin/custom-field": "24.2.0-alpha14",
-      "@vaadin/date-picker": "24.2.0-alpha14",
-      "@vaadin/date-time-picker": "24.2.0-alpha14",
-      "@vaadin/details": "24.2.0-alpha14",
-      "@vaadin/dialog": "24.2.0-alpha14",
-      "@vaadin/email-field": "24.2.0-alpha14",
-      "@vaadin/field-base": "24.2.0-alpha14",
-      "@vaadin/field-highlighter": "24.2.0-alpha14",
-      "@vaadin/form-layout": "24.2.0-alpha14",
-      "@vaadin/grid": "24.2.0-alpha14",
-      "@vaadin/grid-pro": "24.2.0-alpha14",
-      "@vaadin/horizontal-layout": "24.2.0-alpha14",
-      "@vaadin/icon": "24.2.0-alpha14",
-      "@vaadin/icons": "24.2.0-alpha14",
-      "@vaadin/input-container": "24.2.0-alpha14",
-      "@vaadin/integer-field": "24.2.0-alpha14",
-      "@vaadin/item": "24.2.0-alpha14",
-      "@vaadin/list-box": "24.2.0-alpha14",
-      "@vaadin/lit-renderer": "24.2.0-alpha14",
-      "@vaadin/login": "24.2.0-alpha14",
-      "@vaadin/map": "24.2.0-alpha14",
-      "@vaadin/menu-bar": "24.2.0-alpha14",
-      "@vaadin/message-input": "24.2.0-alpha14",
-      "@vaadin/message-list": "24.2.0-alpha14",
-      "@vaadin/multi-select-combo-box": "24.2.0-alpha14",
-      "@vaadin/notification": "24.2.0-alpha14",
-      "@vaadin/number-field": "24.2.0-alpha14",
-      "@vaadin/overlay": "24.2.0-alpha14",
-      "@vaadin/password-field": "24.2.0-alpha14",
-      "@vaadin/polymer-legacy-adapter": "24.2.0-alpha14",
-      "@vaadin/progress-bar": "24.2.0-alpha14",
-      "@vaadin/radio-group": "24.2.0-alpha14",
-      "@vaadin/rich-text-editor": "24.2.0-alpha14",
+      "@vaadin/a11y-base": "24.3.1",
+      "@vaadin/accordion": "24.3.1",
+      "@vaadin/app-layout": "24.3.1",
+      "@vaadin/avatar": "24.3.1",
+      "@vaadin/avatar-group": "24.3.1",
+      "@vaadin/board": "24.3.1",
+      "@vaadin/bundles": "24.3.1",
+      "@vaadin/button": "24.3.1",
+      "@vaadin/charts": "24.3.1",
+      "@vaadin/checkbox": "24.3.1",
+      "@vaadin/checkbox-group": "24.3.1",
+      "@vaadin/combo-box": "24.3.1",
+      "@vaadin/common-frontend": "0.0.19",
+      "@vaadin/component-base": "24.3.1",
+      "@vaadin/confirm-dialog": "24.3.1",
+      "@vaadin/context-menu": "24.3.1",
+      "@vaadin/cookie-consent": "24.3.1",
+      "@vaadin/crud": "24.3.1",
+      "@vaadin/custom-field": "24.3.1",
+      "@vaadin/date-picker": "24.3.1",
+      "@vaadin/date-time-picker": "24.3.1",
+      "@vaadin/details": "24.3.1",
+      "@vaadin/dialog": "24.3.1",
+      "@vaadin/email-field": "24.3.1",
+      "@vaadin/field-base": "24.3.1",
+      "@vaadin/field-highlighter": "24.3.1",
+      "@vaadin/form-layout": "24.3.1",
+      "@vaadin/grid": "24.3.1",
+      "@vaadin/grid-pro": "24.3.1",
+      "@vaadin/horizontal-layout": "24.3.1",
+      "@vaadin/icon": "24.3.1",
+      "@vaadin/icons": "24.3.1",
+      "@vaadin/input-container": "24.3.1",
+      "@vaadin/integer-field": "24.3.1",
+      "@vaadin/item": "24.3.1",
+      "@vaadin/list-box": "24.3.1",
+      "@vaadin/lit-renderer": "24.3.1",
+      "@vaadin/login": "24.3.1",
+      "@vaadin/map": "24.3.1",
+      "@vaadin/menu-bar": "24.3.1",
+      "@vaadin/message-input": "24.3.1",
+      "@vaadin/message-list": "24.3.1",
+      "@vaadin/multi-select-combo-box": "24.3.1",
+      "@vaadin/notification": "24.3.1",
+      "@vaadin/number-field": "24.3.1",
+      "@vaadin/overlay": "24.3.1",
+      "@vaadin/password-field": "24.3.1",
+      "@vaadin/polymer-legacy-adapter": "24.3.1",
+      "@vaadin/progress-bar": "24.3.1",
+      "@vaadin/radio-group": "24.3.1",
+      "@vaadin/rich-text-editor": "24.3.1",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.2.0-alpha14",
-      "@vaadin/select": "24.2.0-alpha14",
-      "@vaadin/side-nav": "24.2.0-alpha14",
-      "@vaadin/split-layout": "24.2.0-alpha14",
-      "@vaadin/tabs": "24.2.0-alpha14",
-      "@vaadin/tabsheet": "24.2.0-alpha14",
-      "@vaadin/text-area": "24.2.0-alpha14",
-      "@vaadin/text-field": "24.2.0-alpha14",
-      "@vaadin/time-picker": "24.2.0-alpha14",
-      "@vaadin/tooltip": "24.2.0-alpha14",
-      "@vaadin/upload": "24.2.0-alpha14",
+      "@vaadin/scroller": "24.3.1",
+      "@vaadin/select": "24.3.1",
+      "@vaadin/side-nav": "24.3.1",
+      "@vaadin/split-layout": "24.3.1",
+      "@vaadin/tabs": "24.3.1",
+      "@vaadin/tabsheet": "24.3.1",
+      "@vaadin/text-area": "24.3.1",
+      "@vaadin/text-field": "24.3.1",
+      "@vaadin/time-picker": "24.3.1",
+      "@vaadin/tooltip": "24.3.1",
+      "@vaadin/upload": "24.3.1",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.2.0-alpha14",
-      "@vaadin/vaadin-material-styles": "24.2.0-alpha14",
-      "@vaadin/vaadin-themable-mixin": "24.2.0-alpha14",
+      "@vaadin/vaadin-lumo-styles": "24.3.1",
+      "@vaadin/vaadin-material-styles": "24.3.1",
+      "@vaadin/vaadin-themable-mixin": "24.3.1",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.2.0-alpha14",
-      "@vaadin/virtual-list": "24.2.0-alpha14",
+      "@vaadin/vertical-layout": "24.3.1",
+      "@vaadin/virtual-list": "24.3.1",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.8.0",
-      "mobile-drag-drop": "2.3.0-rc.2",
-      "proj4": "2.9.0"
+      "lit": "3.1.0",
+      "proj4": "2.9.2"
     },
     "devDependencies": {
-      "@rollup/plugin-replace": "5.0.2",
-      "@rollup/pluginutils": "5.0.2",
-      "@vitejs/plugin-react": "4.0.4",
+      "@rollup/plugin-replace": "5.0.4",
+      "@rollup/pluginutils": "5.0.5",
+      "@vitejs/plugin-react": "4.2.0",
+      "@vitejs/plugin-react-swc": "3.5.0",
       "async": "3.2.4",
       "glob": "10.3.3",
       "rollup-plugin-brotli": "3.1.0",
       "rollup-plugin-visualizer": "5.9.2",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.1.6",
-      "vite": "4.4.9",
-      "vite-plugin-checker": "0.6.1",
+      "typescript": "5.3.3",
+      "vite": "5.0.6",
+      "vite-plugin-checker": "0.6.2",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "e528129cee845b3cf9d5e3a35723432539acd862d0cc17ef9c21f49bce5e5f3f"
+    "hash": "8900ec9ed877e9931de9a5065757a344cc49f9126504c35292229d10a23cf6fd"
   }
 }
