--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <vaadin.version>24.7.1</vaadin.version>
+        <vaadin.version>24.7.3</vaadin.version>
     </properties>
 
     <parent>
@@ -177,6 +177,15 @@
                         <configuration>
                             <trimStackTrace>false</trimStackTrace>
                             <enableAssertions>true</enableAssertions>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.14.0</version>
+                        <configuration>
+                            <!-- put your configurations here -->
                         </configuration>
                     </plugin>
                 </plugins>
