--- a/pom.xml
+++ b/pom.xml
@@ -185,7 +185,8 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.14.0</version>
                         <configuration>
-                            <!-- put your configurations here -->
+                            <source>21</source>
+                            <target>21</target>
                         </configuration>
                     </plugin>
                 </plugins>
